[tool.poetry]
name = "se2020"
version = "0.1.0"
description = "Morse encoder"
authors = ["PinarKaragulle <72393604+PinarKaragulle@users.noreply.github.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
tox = "^3.23.0"


[tool.tox] 
legacy_tox_ini = """
[tox] 
envlist = py39
isolated_build = True 

[testenv] 
deps = pytest 
	flask 
commands = pytest tests 
"""


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
