[tool.poetry]
name = "se2020"
version = "0.1.0"
description = "Morse encoder"
authors = ["PinarKaragulle <72393604+PinarKaragulle@users.noreply.github.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.6"
Flask = "^1.1.2"
gunicorn = "^20.1.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
tox = "^3.23.0"
pytest-cov = "^2.11.1"
flake8 = "^3.9.1"
black = "^20.8b1"
Sphinx = "^3.5.4"


[tool.tox] 
legacy_tox_ini = """
[tox] 
envlist = py39, style
isolated_build = True 

[testenv] 
deps = pytest 
	flask 
commands = pytest tests 

[testenv:style]
deps = flake8
commands = flake8 se2020
"""


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
